SERVER-71946 Add InterruptedDueToReplStateChange to the "cancellation" error category