src/mongo/executor/scoped_task_executor.cpp
@@ -371,7 +371,9 @@ ScopedTaskExecutor::ScopedTaskExecutor(std::shared_ptr<TaskExecutor> executor)
 
 ScopedTaskExecutor::ScopedTaskExecutor(std::shared_ptr<TaskExecutor> executor,
                                        Status shutdownStatus)
-    : _executor(std::make_shared<Impl>(std::move(executor), std::move(shutdownStatus))) {}
+    : _executor(std::make_shared<Impl>(std::move(executor), shutdownStatus)) {
+    invariant(ErrorCodes::isA<ErrorCategory::CancellationError>(shutdownStatus));
+}
 
 ScopedTaskExecutor::~ScopedTaskExecutor() {
     _executor->shutdown();
